--- a/src/styles/base/_extends.scss
+++ b/src/styles/base/_extends.scss
@@ -13,21 +13,17 @@
 
 // font-sizes
 %h1 {
-  font-size: 26px;
+  font-size: rem(26);
 }
 
 %h2 {
-  font-size: 22px;
+  font-size: rem(22);
 }
 
 %h3 {
-  font-size: 18px;
-}
-
-%h4 {
-  font-size: 18px;
+  font-size: rem(18);
 }
 
 %defaultFontSize {
-  font-size: 15px;
+  font-size: 16px;
 }
