--- a/src/styles/pages/_todo.scss
+++ b/src/styles/pages/_todo.scss
@@ -1,15 +1,15 @@
 .todo {
-  @include display_flex($direction: column, $gap: 3rem);
+  @include display_flex($direction: column, $gap: rem(48));
 
   background: $color-white;
 
-  padding: 1rem;
+  padding: rem(16);
 
   border-radius: 6px;
 
   box-shadow: 0 0 8px 3px $color-shadow;
 
-  @media (min-width: 768px) {
+  @media (min-width: rem(768)) {
     @include display_flex($direction: row);
   }
 
@@ -17,13 +17,14 @@
     @include display_flex(
       $direction: column,
       $justify: space-between,
-      $gap: 1rem
+      $gap: rem(16)
     );
 
-    min-width: 280px;
+    min-width: rem(280);
+    max-width: rem(320);
 
     box-shadow: 0 0 8px 3px $color-shadow;
-    padding: 1rem 0.5rem;
+    padding: rem(16) rem(8);
     border-radius: 5px;
 
     .h1 {
@@ -31,12 +32,12 @@
     }
 
     &-add {
-      @include display_flex($gap: 1rem);
+      @include display_flex($gap: rem(16));
 
       &-input {
         width: 100%;
 
-        padding: 0.5rem;
+        padding: rem(8);
 
         border-radius: 5px;
         border: 1px solid $color-grey-darker;
@@ -47,13 +48,14 @@
       }
     }
 
-    @media (min-width: 768px) {
-      min-width: 330px;
+    @media (min-width: rem(768)) {
+      min-width: rem(330);
+      max-width: rem(350);
     }
   }
 
   &-list {
-    @include display_flex($direction: column, $gap: 0.5rem);
+    @include display_flex($direction: column, $gap: rem(8));
 
     margin-bottom: auto;
 
@@ -73,7 +75,7 @@
       }
 
       &-text {
-        padding: 0.5rem 1rem;
+        padding: rem(8) rem(16);
       }
 
       &-buttons {
@@ -85,7 +87,7 @@
         .btn {
           height: 100%;
 
-          padding: 0 1rem;
+          padding: 0 rem(16);
 
           border-radius: 0;
         }
@@ -100,7 +102,7 @@
       @include display_flex(
         $align: center,
         $justify: space-between,
-        $gap: 1rem
+        $gap: rem(16)
       );
     }
   }
